--- a/index.html
+++ b/index.html
@@ -2046,7 +2046,7 @@
                                                                 );
                                                             "><strong>
                                                                 200,000 MZN
-                                                                Pro</strong></span>
+                                                                </strong></span>
                                                     </p>
                                                 </div>
                                             </div>
